Add web3j client demo

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.web3j</groupId>
+      <artifactId>core</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>net.osslabz.evm</groupId>
       <artifactId>evm-abi-decoder</artifactId>
       <version>0.0.6</version>
